--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,6 +38,8 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter((inv) => (inv["year"]<1600 && inv["year"]>=1500));
+    console.log(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
